--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
-
+repositories {
+    mavenCentral()
+}
 android {
     compileSdkVersion 24
     buildToolsVersion "25.0.1"
@@ -37,5 +39,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'org.springframework.android:spring-android-rest-template:1.0.1.RELEASE'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.3.2'
+    compile 'com.facebook.android:facebook-android-sdk:4.5.0'
     testCompile 'junit:junit:4.12'
 }
