suivi equipe ok

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SearchActivity" />
+        <activity android:name=".SearchMembreActivity" />
+        <activity android:name=".SearchTeamActivity" />
         <activity android:name=".updateLoginActivity"></activity>
     </application>
 
