connection ok update ok inscirption ok

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         </activity>
         <activity android:name=".SearchMembreActivity" />
         <activity android:name=".SearchTeamActivity" />
-        <activity android:name=".updateLoginActivity"></activity>
+        <activity android:name=".updateLoginActivity" />
+        <activity android:name=".InscriptionActivity"></activity>
     </application>
 
 </manifest>
