affichage après match OK affichage de la moyenne des votes ambiance etc OK vote ambiance, niveau fairplay OK affichage commentaire OK

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,9 @@
         <activity android:name=".updateLoginActivity" />
         <activity android:name=".ResultRechercheMatch" />
         <activity android:name=".BeforeMatchActivity" />
-        <activity android:name=".ClassementActivity"></activity>
+        <activity android:name=".InscriptionActivity" />
+        <activity android:name=".ClassementActivity" />
+        <activity android:name=".AfterMatchActivity"></activity>
     </application>
 
 </manifest>
