--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".SearchTeamActivity" />
         <activity android:name=".updateLoginActivity" />
         <activity android:name=".ResultRechercheMatch"></activity>
+        <activity android:name=".InscriptionFacebookActivity"></activity>
         <activity android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
