--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
+
         <activity
             android:name=".NavActivity"
             android:label="@string/app_name"
@@ -26,17 +29,18 @@
         <activity android:name=".SearchMembreActivity" />
         <activity android:name=".SearchTeamActivity" />
         <activity android:name=".updateLoginActivity" />
-        <activity android:name=".ResultRechercheMatch"></activity>
-        <activity android:name=".InscriptionFacebookActivity"></activity>
+        <activity android:name=".ResultRechercheMatch" />
+        <activity android:name=".InscriptionFacebookActivity" />
         <activity android:name=".BeforeMatchActivity" />
         <activity android:name=".InscriptionActivity" />
         <activity android:name=".ClassementActivity" />
-        <activity android:name=".AfterMatchActivity"></activity>
-        <activity android:name="com.facebook.FacebookActivity"
+        <activity android:name=".AfterMatchActivity" />
+        <activity
+            android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            android:label="@string/app_name" />
-
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+        <activity android:name=".DuringMatchActivity"></activity>
     </application>
 
 </manifest>
