--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         <activity android:name=".BeforeMatchActivity" />
         <activity android:name=".InscriptionActivity" />
         <activity android:name=".ClassementActivity" />
+        <activity android:name=".AutreMatchActivity" />
         <activity android:name=".AfterMatchActivity" />
         <activity
             android:name="com.facebook.FacebookActivity"
