--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
       <activity android:name=".AutreMatchActivity" 
                 android:screenOrientation="portrait"/>
     <activity android:name=".DuringMatchActivity" 
-                                android:screeOrientation="portrait" />
+                                android:screenOrientation="portrait" />
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
