--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_logoapp"
+        android:icon="@drawable/icone"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -49,7 +49,7 @@
       <activity android:name=".AutreMatchActivity" 
                 android:screenOrientation="portrait"/>
     <activity android:name=".DuringMatchActivity" 
-                                android:screeOrientation="portrait" />
+                                android:screenOrientation="portrait" />
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
